--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,5 @@
+/*  
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -39,4 +41,9 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities; 
