--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,6 +42,9 @@
 .read-the-docs {
   color: #888;
 } */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
  .custom-border{
   border-width: 10px;
  }
