added css to BusinessInfoDiv for mobile responsive

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,7 +37,17 @@
   }
 }
 
+.main-div {
+  @apply relative w-full h-full overflow-hidden;
+}
 
+.scroll-container {
+  @apply flex overflow-x-auto snap-x snap-mandatory scroll-smooth;
+}
+
+.child-div {
+  @apply flex-shrink-0 w-full h-full snap-start;
+}
  
 
 @tailwind base;
